--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -4,6 +4,8 @@ node {
      checkout scm
      sh "git rev-parse --short HEAD > .git/commit-id"                        
      commit_id = readFile('.git/commit-id').trim()
+     echo commit_id
+     echo "Test"
    }
    stage('test') {
      nodejs(nodeJSInstallationName: 'nodejs') {
